# mcp

./: .env.example  docker-compose.yaml
src/aws-diagram-mcp-server/: Dockerfile  pyproject.toml
src/aws-diagram-mcp-server/awslabs/aws_diagram_mcp_server/: diagrams_tools.py  server.py
src/core-mcp-server/: Dockerfile  pyproject.toml
src/core-mcp-server/awslabs/core_mcp_server/: server.py
src/terraform-mcp-server/: Dockerfile  pyproject.toml
src/terraform-mcp-server/awslabs/terraform_mcp_server/: server.py
src/terraform-mcp-server/awslabs/terraform_mcp_server/impl/tools/: execute_terraform_command.py
