[project]
name = "awslabs.core-mcp-server"
version = "1.0.9"
description = "An AWS Labs Model Context Protocol (MCP) server for aswlabs Core MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "awslabs-amazon-sns-sqs-mcp-server>=2.0.4",
    "awslabs-aws-api-mcp-server>=0.2.2",
    "awslabs-aws-diagram-mcp-server>=1.0.5",
    "awslabs-aws-pricing-mcp-server>=1.0.8",
    "awslabs-aws-serverless-mcp-server>=0.1.7",
    "awslabs-aws-support-mcp-server>=0.1.7",
    "awslabs-cdk-mcp-server>=1.0.4",
    "awslabs-cfn-mcp-server>=1.0.6",
    "awslabs-code-doc-gen-mcp-server>=1.0.2",
    "awslabs-cost-explorer-mcp-server>=0.0.8",
    "awslabs-ecs-mcp-server>=0.1.5",
    "awslabs-eks-mcp-server>=0.1.8",
    "awslabs-finch-mcp-server>=0.1.4",
    "awslabs-git-repo-research-mcp-server>=1.0.5",
    "awslabs-iam-mcp-server>=1.0.3",
    "awslabs-lambda-tool-mcp-server>=2.0.4",
    "awslabs-stepfunctions-tool-mcp-server>=0.1.9",
    "awslabs-syntheticdata-mcp-server>=1.0.3",
    "awslabs-well-architected-security-mcp-server>=0.1.1",
    "boto3>=1.37.0",
    "fastmcp>=2.11.1",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]
license = {text = "Apache-2.0"}
license-files = ["LICENSE", "NOTICE" ]

authors = [
    {name = "Amazon Web Services"},
    {name = "AWSLabs MCP", email="203918161+awslabs-mcp@users.noreply.github.com"},
    {name = "Paul Vincent", email="44383239+PaulVincent707@users.noreply.github.com"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
"awslabs.core-mcp-server" = "awslabs.core_mcp_server.server:main"

[project.urls]
Homepage = "https://awslabs.github.io/mcp/"
Documentation = "https://awslabs.github.io/mcp/servers/core-mcp-server/"
Source = "https://github.com/awslabs/mcp.git"
"Bug Tracker" = "https://github.com/awslabs/mcp/issues"
Changelog = "https://github.com/awslabs/mcp/blob/main/src/core-mcp-server/CHANGELOG.md"

[dependency-groups]
dev = [
    "commitizen>=4.2.2",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
    "pyright>=1.1.398",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]
exclude = [
    ".venv",
    "**/__pycache__",
    "**/node_modules",
    "**/dist",
    "**/build",
    "**/env",
    "**/.ruff_cache",
    "**/.venv",
    "**/.ipynb_checkpoints"
]
force-exclude = true

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["F704"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "awslabs/core_mcp_server/__init__.py:__version__"
]
update_changelog_on_bump = true

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]

[tool.bandit]
exclude_dirs = ["venv","tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=awslabs.core_mcp_server --cov-report=term-missing"
markers = [
    "live: mark test as making live API calls",
]

[tool.coverage.run]
source = ["awslabs"]
